people-smuggler/css/main.css
/* ... */
h2 {
	margin: 0;
}

ul, ol {
	list-style: none;
	margin: 0;
	padding: 0;
}

a, a:hover {
	text-decoration: none;
}

/* Responsive images */

.image .image__item {
	position: absolute;
	height: 100%;
	min-width: 100%;
}

.image--16x9 {
	padding-bottom: 56.25%;
}

.image--4x3 {
	padding-bottom: 75%;
}

.image {
	position: relative;
	overflow: hidden;
	width: 100%;
}

.image__item--clone {
	-webkit-transition: opacity 0.2s ease-out;
	-moz-transition: opacity 0.2s ease-out;
	-ms-transition: opacity 0.2s ease-out;
	transition: opacity 0.2s ease-out;
}

.image__item--hidden {
	opacity: 0;
}

.image--background {
	position: absolute;
	top: 0;
	width: 100vw;
	z-index: -1;
}

.image--face {
	
}

.image--face-replace {
	opacity: 0;
	-webkit-transition: opacity 3s;
	transition: opacity 3s;
	position: absolute;
	top: 0;
	width: 100%;
}

.in-view .image--fade-in {
	opacity: 1;
}


/* Video */

.video {}

.video--documentary {
	position: absolute;
	width: 100%;
	height: 0;
	padding-bottom: 51.25%;
}

.video__item {
	width: 100%;
	float: left;
}

.video__caption {
	font-size: .9rem;
	padding: .5rem;
	background: #efefef;
	overflow: hidden;
}

/* Documentary */

.documentary {
	display: none;
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	background: rgba(0, 0, 0, 0.4);
}

.documentary--active {
	display: block;
}

/* Header */

.header {
	width: 100%;
	height: 60px;
	background: white;
}

.header__logo {
	margin: 10px 0 0 10px;
	height: 40px;
	float: left;
}

.header__link {
	display: block;
}

.header__list {
	float: right;
	margin: 18px 15px 0 0;
}

.header__item {
	float: left;
}

.header__item:first-child {
	margin-right: 20px;	
}

.header__social-icon {
	width: 22px;
	height: 22px;
	opacity: 0.6;
}

.header__link:hover .header__social-icon {
	opacity: 1;
}

/* Hero */

.hero {
	position: relative;
	letter-spacing: 2px;
  	font-weight: normal;
	border-bottom: 10px solid #efefef;
	font-size: 1.1rem;
}

.hero__content {
	position: absolute;
	bottom: 10px;
	right: 5px;
}

.hero__title {
	font-size: 1.3em;
	margin: 0;
	font-weight: normal;
	letter-spacing: 2px;
	line-height: 1.2;
}

.hero__title-bold {
	text-transform: uppercase;
	background: black;
	color: white;
	padding: 2px 6px;
	font-size: 0.9em;
}

.hero__title-full-width {
	display: block;
	letter-spacing: 3px;
}

.hero__text {
	font-size: 1.2em;
	text-transform: uppercase;
	margin-top: 0.5em;
}

/* Scenes */

.scenes {
	overflow: hidden;
	position: relative;
}

/* Scene */

.scene {
	background-color: white;
	background-position: center center;
	background-size: contain;
	background-repeat: no-repeat;
	overflow: hidden;
	position: relative;
	clear: both;
	border-bottom: 10px solid #efefef;
	border-top: 10px solid #efefef;
}

.scene--4x3 {
	min-height: 74vw;
}

.scene--16x9 {
	min-height: 56.25vw;
}

.scene__inner {
	position: relative;
}

.scene__header {
	background: white;
	width: 100%;
	z-index: 10;
	position: relative;
	padding-top: 30px;
}

.scene__title {
	/*text-align: center;*/
	text-transform: uppercase;
	font-family: SkyTextMedium;
	font-size: 8vw;
	margin: 0;
	position: relative;
	background: white;
	padding: 0 0 0 20px;
	z-index: 10;
	display: inline-block;
}

.scene__leader {
	font-size: 6vw;
	/*text-align: center;*/
	padding: 0 20px 0 20px;
	display: inline-block;
	float: right;
	line-height: 12vw;
	color: #9c9c9c;
}

.touch .scene__leader {
	display: none;
}

.scene__text {
	font-size: 1.2rem;
	padding: 0;
	margin: 0 0 1em 0;
}

.scene__text--translucent {
	background: rgba(255,255,255, 0.5);
}

.scene__media {
	background-position: center center;
	background-size: cover;
	padding: 20px;
	background-color: white;
}

.scene__background .video__item {
	position: absolute;
	top: 0;
}

.touch .scene--video-background {
	display: none;
}

/* Map overlays */
.map-overlay {
	position: absolute;
	top: 0;
	width: 100%;
}

.map-overlay__link {
	-webkit-transition: -webkit-transform 1s, opacity 1s;
	-moz-transition: opacity 1s, -moz-transform 1s;
	-ms-transition: opacity 1s, -ms-transform 1s;
	transition: opacity 1s, transform 1s, -webkit-transform 1s;

	-webkit-transform-origin: 50% 50%;
	-moz-transform-origin: 50% 50%;
	-ms-transform-origin: 50% 50%;
	transform-origin: 50% 50%;

	-webkit-transform: scale(0.5);
	-moz-transform: scale(0.5);
	-ms-transform: scale(0.5);
	transform: scale(0.5);

	opacity: 0.5;

	display: inline-block;
}

.in-view.map-overlay__link {
	-webkit-transform: scale(1);
	-moz-transform: scale(1);
	-ms-transform: scale(1);
	transform: scale(1);
	opacity: 1;
}

.map-overlay__link {
	background: black;
	color: white;
	text-transform: uppercase;
	padding: 0.2vw 1vw;
	letter-spacing: 0.5vw;
	font-size: 3vw;
}

.map-overlay__item {
	position: absolute;
}

.map-overlay__item--khartoum {
	padding-top: 60%;
	left: 68%;
}

.map-overlay__item--kufra {
	padding-top: 38%;
	left: 53%;
}

.map-overlay__item--benghazi {
	padding-top: 13%;
	left: 56%;
}

.map-overlay__item--tripoli {
	padding-top: 11%;
	left: 38%;
}

.map-overlay__item--zuwara {
	padding-top: 14%;
	left: 19%;
}

.map-overlay__item--lampedusa {
	padding-top: 3%;
	left: 20%;
}

.map__marker {
	width: 12vw;
	height: 12vw;
	/*background-image: url('../images/marker-1.png');*/
	/*background-size: cover;*/
	position: absolute;
	top: 50%;
	left: 50%;
/*	-webkit-transform: scale(0.1);
	-moz-transform: scale(0.1);
	-ms-transform: scale(0.1);
	transform: scale(0.1);*/

	-webkit-transform-origin: 0 0;
	-moz-transform-origin: 0 0;
	-ms-transform-origin: 0 0;
	transform-origin: 0 0;
}

.map__marker-pulse {
	width: 100%;
	-webkit-transform: scale(1);
	-moz-transform: scale(1);
	-ms-transform: scale(1);
	transform: scale(1);
	position: absolute;
	top: -50%;
	left: -50%;
}

.map__marker-static {
	width: 100%;
	position: absolute;
	top: -50%;
	left: -50%;
}

.in-view .map__marker-pulse {
	-webkit-animation: 1.5s webkit-pulse 2 forwards;
	-moz-animation: 1.5s moz-pulse 2 forwards;
	-ms-animation: 1.5s ms-pulse 2 forwards;
	animation: 1.5s pulse 2 forwards;
}
/* ... */

